--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -56,7 +56,7 @@
                                     <td class="py-3">
                                         <small class="ml-3">
                                             <a href="{% url 'edit_review' item.id %}">Edit</a> |
-                                            <a class="text-danger" href="{% url 'delete_review' item.id %}">Delete</a>
+                                            <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
                                         </small>
                                     </td>
                                 </tr>
